wolfssh/ssh.h

typedef struct WOLFSSH_CTX WOLFSSH_CTX;
typedef struct WOLFSSH WOLFSSH;
WOLFSSH_API int wolfSSH_Init(void);
WOLFSSH_API int wolfSSH_Cleanup(void);
/* context functions */
WOLFSSH_API WOLFSSH_CTX* wolfSSH_CTX_new(byte side, void* heap);
WOLFSSH_API void wolfSSH_CTX_free(WOLFSSH_CTX* ctx);
/* ssh session functions */
WOLFSSH_API WOLFSSH* wolfSSH_new(WOLFSSH_CTX* ctx);
WOLFSSH_API void wolfSSH_free(WOLFSSH* ssh);
WOLFSSH_API int wolfSSH_set_fd(WOLFSSH* ssh, WS_SOCKET_T fd);
WOLFSSH_API int wolfSSH_get_error(const WOLFSSH* ssh);
WOLFSSH_API const char* wolfSSH_ErrorToName(int err);
/* User Authentication callback */
typedef struct WS_UserAuthData_Password {
    const byte* password;
    word32 passwordSz;
    /* The following are present for future use. */
    byte hasNewPassword;
    const byte* newPassword;
    word32 newPasswordSz;
} WS_UserAuthData_Password;
typedef struct WS_UserAuthData_Keyboard {
    word32 promptCount;
    word32 responseCount;
    word32 promptNameSz;
    word32 promptInstructionSz;
    word32 promptLanguageSz;
    byte* promptName;
    byte* promptInstruction;
    byte* promptLanguage;
    word32* promptLengths;
    word32* responseLengths;
    byte* promptEcho;
    byte** responses;
    byte** prompts;
} WS_UserAuthData_Keyboard;
typedef struct WS_UserAuthData_PublicKey {
    const byte* dataToSign;
    const byte* publicKeyType;
    word32 publicKeyTypeSz;
    const byte* publicKey;
    word32 publicKeySz;
    const byte* privateKey;
    word32 privateKeySz;
    byte hasSignature;
    const byte* signature;
    word32 signatureSz;
    byte isCert:1;
    word32 dataToSignSz; /* signed request length; 0 = derive from the fields */
#ifdef WOLFSSH_OSSH_CERTS
    /* Set while isOsshCert; the callback must trust-check caKey. Keep last so
     * the members above hold their offsets in both builds. */
    byte isOsshCert:1;
    const byte* caKey;
    word32 caKeySz;
    const byte* principals;
    word32 principalsSz;
    word64 validAfter;  /* epoch seconds */
    word64 validBefore;
    /* NULL when absent; sourceAddress is a comma-separated CIDR list. */
    const byte* forceCommand;
    word32 forceCommandSz;
    const byte* sourceAddress;
    word32 sourceAddressSz;
#endif /* WOLFSSH_OSSH_CERTS */
} WS_UserAuthData_PublicKey;
typedef struct WS_UserAuthData {
    byte type;
    const byte* username;
    word32 usernameSz;
    const byte* serviceName;
    word32 serviceNameSz;
    const byte* authName;
    word32 authNameSz;
    union {
        WS_UserAuthData_Password password;
        WS_UserAuthData_PublicKey publicKey;
#ifdef WOLFSSH_KEYBOARD_INTERACTIVE
        WS_UserAuthData_Keyboard keyboard;
#endif
    } sf;
} WS_UserAuthData;
/* User Authentication Callback
 *
 * A server-side callback that decides whether to authenticate a client.
 * Return WOLFSSH_USERAUTH_SUCCESS only on a positive authentication
 * decision. WOLFSSH_USERAUTH_PARTIAL_SUCCESS reports that one factor of
 * a multi-method authentication passed, WOLFSSH_USERAUTH_SUCCESS_ANOTHER
 * reports that a keyboard-interactive round passed and asks for the next
 * round, WOLFSSH_USERAUTH_WOULD_BLOCK asks for the request to be
 * retried, and WOLFSSH_USERAUTH_REJECTED is a hard rejection: the server
 * answers with USERAUTH_FAILURE, then ends the session. Any other value
 * is treated as an ordinary failure.
 *
 * WARNING: WOLFSSH_USERAUTH_SUCCESS has the value 0, the same as
 * WS_SUCCESS and the C "no error" idiom. A bare "return 0;", a forwarded
 * WS_SUCCESS from a helper, or a fall-through default of 0 silently
 * authenticates the client. Return WOLFSSH_USERAUTH_FAILURE for any
 * authType or code path the callback does not explicitly handle.
 *
 * For WOLFSSH_USERAUTH_PUBLICKEY, the callback must check the offered
 * public key against the user's authorized keys; returning success on an
 * unchecked key authorizes an attacker-supplied key. The library verifies
 * the signature, not the key's authorization. */
typedef int (*WS_CallbackUserAuth)(byte authType, WS_UserAuthData* authData,
        void* ctx);
WOLFSSH_API void wolfSSH_SetUserAuth(WOLFSSH_CTX* ctx, WS_CallbackUserAuth cb);
WOLFSSH_API void wolfSSH_SetUserAuthCtx(WOLFSSH* ssh, void* userAuthCtx);
/* Public Key Check Callback
 *
 * A client-side callback that decides whether to trust the server's host
 * key, the client's only defense against a man-in-the-middle. Return 0 to
 * accept the key; return non-zero to reject it and fail the key exchange.
 *
 * WARNING: 0 accepts, so a stub that defaults to "return 0;" accepts any
 * server host key and defeats MITM protection. The callback must match
 * the key against a trust store, e.g. a known-hosts list; see
 * ClientPublicKeyCheck() in the examples. If no callback is registered,
 * the host key is rejected (WS_PUBKEY_REJECTED_E). */
typedef int (*WS_CallbackPublicKeyCheck)(const byte* publicKey,
        word32 publicKeySz, void* ctx);
WOLFSSH_API void wolfSSH_CTX_SetPublicKeyCheck(WOLFSSH_CTX* ctx,
                                               WS_CallbackPublicKeyCheck cb);
WOLFSSH_API void wolfSSH_SetPublicKeyCheckCtx(WOLFSSH* ssh,
        void* publicKeyCheckCtx);
WOLFSSH_API int wolfSSH_SetUsername(WOLFSSH* ssh, const char* username);
WOLFSSH_API int wolfSSH_connect(WOLFSSH* ssh);
/* Tears down the first channel in the list, and flushes whatever a short
 * send left queued, not just a disconnect of ours: a rejected auth's
 * USERAUTH_FAILURE, and a CHANNEL_CLOSE whose channel was retired the
 * moment it was bundled, have nothing else left to carry the retry. That
 * flush can be short too, so a WS_WANT_WRITE from here may be owed to it
 * rather than to the teardown sends; either way the caller retries.
 * The read for the peer's close reply can leave output queued behind it,
 * which reports WS_WANT_WRITE as well; a send that failed outright there
 * takes the return on the next call. Once the peer has disconnected, only
 * our own queued disconnect still goes out, per the comment below. */
WOLFSSH_API int wolfSSH_shutdown(WOLFSSH* ssh);
/* Returns the bytes read; the next read clears the status. WS_WANT_WRITE
 * from wolfSSH_get_error() means the adjust is queued; it goes out on the
 * next send or the next wolfSSH_worker(). Others failed. */
WOLFSSH_API int wolfSSH_stream_read(WOLFSSH* ssh, byte* buf, word32 bufSz);
WOLFSSH_API int wolfSSH_stream_send(WOLFSSH* ssh, byte* buf, word32 bufSz);
enum WS_EndpointTypes {
    WOLFSSH_ENDPOINT_SERVER,
    WOLFSSH_ENDPOINT_CLIENT
};
enum WS_FormatTypes {
    WOLFSSH_FORMAT_ASN1,
    WOLFSSH_FORMAT_PEM,
    WOLFSSH_FORMAT_RAW,
    WOLFSSH_FORMAT_SSH,
    WOLFSSH_FORMAT_OPENSSH
};
/* bit map */
#define WOLFSSH_USERAUTH_PASSWORD  0x01
#define WOLFSSH_USERAUTH_PUBLICKEY 0x02
#define WOLFSSH_USERAUTH_KEYBOARD  0x04
#define WOLFSSH_USERAUTH_NONE      0x08
enum WS_UserAuthResults
{
    WOLFSSH_USERAUTH_SUCCESS,
    WOLFSSH_USERAUTH_FAILURE,
    WOLFSSH_USERAUTH_INVALID_AUTHTYPE,
    WOLFSSH_USERAUTH_INVALID_USER,
    WOLFSSH_USERAUTH_INVALID_PASSWORD,
    WOLFSSH_USERAUTH_REJECTED,
    WOLFSSH_USERAUTH_INVALID_PUBLICKEY,
    WOLFSSH_USERAUTH_PARTIAL_SUCCESS,
    WOLFSSH_USERAUTH_SUCCESS_ANOTHER,
    WOLFSSH_USERAUTH_WOULD_BLOCK
};